# templates

./: README
at91/: .gitignore  Makefile  README  hook.c  main.c  main.h  timer.h
at91.c/: .gitignore  Makefile  README  main.h  timer.c  usart.c  usart.h
at91.c/at91lib/chips/at91sam7s256/: flash.lds  sram.lds
at91.c/at91lib/chips/at91sam7x128/: AT91SAM7X128.h
at91.c/at91lib/utility/: led.c  led.h
at91.c/board/: board.h  board.mak  board_lowlevel.h  board_memories.c  board_memories.h
at91.cpp/: Makefile  hook.cpp  hook.h  main.cpp  main.h  timer.cpp  usart.cpp  usart.h
at91.cpp/at91lib/utility/: div0.c  led.h
at91.cpp/board/: board_cstartup.S  board_lowlevel.c
at91.cpp/openocd/: .gitignore  openocd-flash.cfg
at91.cpp/openocd/board/: board.cfg
at91/at91lib/utility/: trace.h
at91/board/: board.h  board_cstartup.S
at91/openocd/: openocd-debug.cfg
at91/openocd/interface/: usb-jtag-a1.cfg
atmega/: Makefile  README  board.h  iostream.h  istream.cpp  main.cpp  main.h  ostream.cpp  ostream.h  usart.cpp  usart.h
simple-gtk/: .gitignore  COPYING  Makefile.am  README  bootstrap  configure.ac
simple-gtk/src/: Makefile.am  SerialInterface.cpp  SerialInterface.h  Template.cpp  Template.h  alphanum.cpp  alphanum.h  template.cpp  template.h  template_gtk.cpp
xmega/: Makefile  README  eeprom.cpp  eeprom.h  i2c.cpp  i2c.h  istream.cpp  istream.h  main.cpp  main.h  spi.cpp  spi.h  usart.cpp  usart.h
xmega.cpp/: COPYING  Makefile  board.h  i2c.cpp  i2c.h  iostream.cpp  istream.h  main.cpp  ostream.cpp  spi.h  usart.cpp  usart.h
(+31 files in other folders)
